--- a/index.html
+++ b/index.html
@@ -5,11 +5,215 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>通行卡</title>
+  <style>
+    button {
+      border: none;
+    }
+
+    button:focus {
+      outline: none;
+    }
+
+    button:hover {
+      border: none;
+    }
+
+    .main {
+      height: 100%;
+      width: 100%;
+    }
+
+    #passMain {
+      background: #f2f2f2;
+      display: block;
+    }
+
+    .pass-code {
+      width: 100%;
+    }
+
+    #pass-dateTime {
+      position: absolute;
+      left: 39vw;
+      top: 48.5vw;
+      font-size: 4.5vw;
+      color: transparent;
+      text-shadow: 0 0 0.8px #194280;
+    }
+
+    .pass-text {
+      position: absolute;
+      top: 18vw;
+      font-size: 3.2vw;
+      color: transparent;
+      text-shadow: 0 0 0.8px #ffffff;
+      font-weight: bold;
+    }
+
+    #pass-name {
+      left: 14.4vw;
+    }
+
+    #pass-id {
+      left: 60vw;
+    }
+
+    #enter-button {
+      position: absolute;
+      top: 133vw;
+      left: 6vw;
+      color: #00000000;
+      background: #00000000;
+      width: 40vw;
+      height: 10vw;
+    }
+
+
+    #enterMain {
+      background: #60ce6d;
+      display: none;
+    }
+
+    .enter-text {
+      position: absolute;
+      left: 45.2vw;
+      font-size: 3.1vw;
+      color: transparent;
+      text-shadow: 0 0 0.8px #444;
+    }
+
+    #enter-name {
+      bottom: 66.3vw
+    }
+
+    #enter-gender {
+      bottom: 61vw;
+    }
+
+    #enter-id {
+      bottom: 56vw;
+    }
+
+    .enter-code {
+      width: 100%;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+    }
+
+    #enter-state {
+      position: absolute;
+      width: 40vw;
+      left: 50vw;
+      transform: translateX(-50%);
+      bottom: 162vw;
+    }
+
+    #enter-img {
+      position: absolute;
+      width: 22.2vw;
+      left: 49.8vw;
+      transform: translateX(-50%);
+      bottom: 146.5vw;
+      display: block;
+    }
+
+    .state-button {
+      position: absolute;
+      left: 50vw;
+      transform: translateX(-50%);
+      bottom: 162vw;
+      width: 40vw;
+      height: 10vw;
+      color: #00000000;
+      background: #00000000;
+    }
+
+    #enter-avatar {
+      position: absolute;
+      width: 33.5vw;
+      bottom: 81.5vw;
+      left: 50vw;
+      transform: translateX(-50%);
+    }
+
+    #enter-dateTime {
+      position: absolute;
+      left: 50vw;
+      bottom: 137vw;
+      font-size: 4vw;
+      transform: translateX(-50%);
+      color: #67ba67;
+    }
+  </style>
 </head>
 
-<body style="height: 100%;">
-  <div id="app" style="height: 100%; width: 100%; padding: 0;"></div>
-  <script type="module" src="/src/main.js"></script>
+<body style="width: 100%; height: 100%; margin: 0;">
+  <div class="main" id="passMain">
+    <!-- 通行码页面 -->
+    <img class="pass-code" src="./imgs/passCode.jpg" />
+    <div class="pass-text" id="pass-name"></div>
+    <div class="pass-text" id="pass-id"></div>
+    <div id="pass-dateTime"></div>
+    <button id="enter-button" onclick="enter()"></button>
+  </div>
+  <div class="main" id="enterMain">
+    <!-- 出入校码页面 -->
+    <img class="enter-code" src="./imgs/enterCode.jpg" />
+    <img id="enter-state" src="./imgs/out.jpg" />
+    <button class="state-button" onclick="state()"></button>
+    <img id="enter-img" src="./imgs/out_text.jpg" />
+    <img id="enter-avatar">
+    <div id="enter-dateTime"></div>
+    <div class="enter-text" id="enter-name"></div>
+    <div class="enter-text" id="enter-gender"></div>
+    <div class="enter-text" id="enter-id"></div>
+  </div>
+  <script>
+    var isHome = true;
+    var isIn = false;
+    var today = new Date();
+    const scanTime = today.getFullYear() + "-" + (today.getMonth() + 1) + "-" + today.getDate() + " " + today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
+    document.getElementById('pass-dateTime').innerHTML = scanTime;
+    const queryString = window.location.search;
+    const urlParams = new URLSearchParams(queryString);
+    const name = urlParams.get("n");
+    const gender = urlParams.get("g");
+    const id = urlParams.get("i");
+    const avatar = urlParams.get("a");
+    document.getElementById('pass-name').innerHTML = name;
+    document.getElementById('pass-id').innerHTML = id;
+    document.getElementById('enter-name').innerHTML = name;
+    document.getElementById('enter-gender').innerHTML = gender;
+    document.getElementById('enter-id').innerHTML = id;
+    document.getElementById('enter-avatar').src = './imgs/avatar/' + avatar + '.jpg';
+    function enter() {
+      isHome = false;
+      document.getElementById('passMain').style.display = 'none';
+      document.getElementById('enterMain').style.display = 'block';
+      document.title = '网上办事大厅-校园卡'
+    }
+    function state() {
+      isIn = !isIn;
+      if (isIn) {
+        document.getElementById('enter-state').src = './imgs/in.jpg';
+        document.getElementById('enter-img').style.display = 'none';
+      }
+      else {
+        document.getElementById('enter-state').src = './imgs/out.jpg';
+        document.getElementById('enter-img').style.display = 'block';
+      }
+    }
+    function dateTimeRefresh() {
+      today = new Date();
+      var date = today.getFullYear() + "年" + (today.getMonth() + 1) + "月" + today.getDate() + "日";
+      var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
+      let dateTime = date + " " + time;
+      document.getElementById('enter-dateTime').innerHTML = dateTime
+    }
+    dateTimeRefresh();
+    setInterval(dateTimeRefresh, 1000);
+  </script>
 </body>
 
 </html>
