update background img

--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
     }
 
     #enter-name {
-      bottom: 66.3vw
+      bottom: 88.3vw
     }
 
     #enter-gender {
-      bottom: 61vw;
+      bottom: 83vw;
     }
 
     #enter-id {
-      bottom: 56vw;
+      bottom: 78vw;
     }
 
     .enter-code {
@@ -106,7 +106,7 @@
       width: 40vw;
       left: 50vw;
       transform: translateX(-50%);
-      bottom: 162vw;
+      bottom: 184vw;
     }
 
     #enter-img {
@@ -114,7 +114,7 @@
       width: 22.2vw;
       left: 49.8vw;
       transform: translateX(-50%);
-      bottom: 146.5vw;
+      bottom: 167.85vw;
       display: block;
     }
 
@@ -122,7 +122,7 @@
       position: absolute;
       left: 50vw;
       transform: translateX(-50%);
-      bottom: 162vw;
+      bottom: 184vw;
       width: 40vw;
       height: 10vw;
       color: #00000000;
@@ -132,7 +132,7 @@
     #enter-avatar {
       position: absolute;
       width: 33.5vw;
-      bottom: 81.5vw;
+      bottom: 103.5vw;
       left: 50vw;
       transform: translateX(-50%);
     }
@@ -140,7 +140,7 @@
     #enter-dateTime {
       position: absolute;
       left: 50vw;
-      bottom: 137vw;
+      bottom: 159vw;
       font-size: 4vw;
       transform: translateX(-50%);
       color: #67ba67;
@@ -191,7 +191,7 @@
       isHome = false;
       document.getElementById('passMain').style.display = 'none';
       document.getElementById('enterMain').style.display = 'block';
-      document.title = '网上办事大厅-校园卡'
+      document.title = '校园卡'
     }
     function state() {
       isIn = !isIn;
